--- a/test_accuracy_paper/test_accuracy_discussion.tex
+++ b/test_accuracy_paper/test_accuracy_discussion.tex
@@ -4,11 +4,9 @@
 \vspace{-3mm}
 
 We have presented a \emph{Unsupervised} metric which  predicts the trends in the test accuracies of a trained deep neural network--without peeking at the test data. This complexity metic $\hat{\alpha}$ is a weighted average of the power law exponents $\alpha$ for each layer weight matrix, where 
-$\alpha$ is defined in our Theory of Heavy Tailed Implicit Regularization.   We prove that this new complexity metric $\hat{\alpha}$ is equivalent to the the average log of the Frobenius norm of the layer weight matrices, $\langle\log\Vert\mathbf{W}\Vert\rangle$, which is much easier to compute.
+$\alpha$ is defined in our Theory of Heavy Tailed Implicit Regularization.   We show that this new complexity metric $\hat{\alpha}$ is roughly equivalent to the the average log of the Frobenius norm of the layer weight matrices, $\langle\log\Vert\mathbf{W}\Vert\rangle$, when accounting for finite size effects.
 
-We examine several  commonly available, production quality, pretrained DNNs  by plotting  the average complexity metric $\langle\log\Vert\mathbf{W}\Vert\rangle$ vs the reported (Top1) test accuracies. This covers classes of DNN architectures including the VGG models, ResNet, DenseNet, etc.  In nearly every class, the smaller average complexity, the better the test accuracy.
-
-\charlesX{We can do BOTH log Norm and Weighted Alpha...which ?  }
+We examine several  commonly available, production quality, pretrained DNNs  by plotting  the weight average complexity metric $\hat{\alpha}$ vs the reported (Top1) test accuracies. This covers classes of DNN architectures including the VGG models, ResNet, DenseNet, etc.  In nearly every class, and except for a few counterexamples, the smaller average complexity, the better the test accuracy.
 
 The method is consistent with both recent theoretical results by Hidary and Poggio, but the approach and the intent is a bit different. 
 Unlike their result, our approach does not require modifying the loss function.
