add macro to file that uses NIPS style

--- a/test_accuracy_paper/test_accuracy_paper.tex
+++ b/test_accuracy_paper/test_accuracy_paper.tex
@@ -67,6 +67,8 @@
 
 \newcommand{\argmin}{\text{argmin}}
 \newcommand{\Probab}[1]{\mbox{}{\bf{Pr}}\left[#1\right]}
+\newcommand{\Expect}[1]{\mbox{}{\bf{E}}\left[#1\right]}
+\newcommand{\ExpectBracket}[1]{\mbox{}\left<#1\right>}
 
 % Here are two macros for comments.
 \newcommand {\michael}[1]{{\color{red}\sf{[michael: #1]}}}
