starting to make changes

--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -730,6 +730,15 @@
   pages =        {7997},
 }
 
+@BOOK{BouchaudPotters03,     
+  author =       {J. P. Bouchaud and M. Potters},
+  title =        {Theory of Financial Risk and Derivative Pricing: From Statistical Physics to Risk Management},
+  publisher =    {Cambridge University Press},
+  year =         {2003},
+  address =      {},
+  series =       {},
+}
+
 @INCOLLECTION{BP11,
   author =       {J. P. Bouchaud and M. Potters},
   title =        {Financial Applications of Random Matrix Theory: a short review},
