--- a/test_accuracy_paper/test_accuracy_appendix.tex
+++ b/test_accuracy_paper/test_accuracy_appendix.tex
@@ -114,19 +114,21 @@ ShuffleNet & shufflenetv2\_wd2 & 41.48 & \\
 
 
 
+See Figure~\ref{fig:counter-examples} for several counterexamples.
+XXX.  COMMENTS.
 
 \begin{figure}[!htb]
     \centering
     \subfigure[ResNeXt]{
-        \includegraphics[scale=0.25]{img/ResNeXt-w_alphas.png} 
+        \includegraphics[scale=0.18]{img/ResNeXt-w_alphas.png} 
         \label{fig:resnet-small}
     }
    \subfigure[MeNet]{
-        \includegraphics[scale=0.25]{img/MeNet-w_alphas.png} 
+        \includegraphics[scale=0.18]{img/MeNet-w_alphas.png} 
         \label{fig:menet-net}
     }
-    '   \subfigure[FDMobileNet]{
-        \includegraphics[scale=0.25]{img/FDMobileNet-w_alphas.png} 
+    \subfigure[FDMobileNet]{
+        \includegraphics[scale=0.18]{img/FDMobileNet-w_alphas.png} 
         \label{fig:resnet-small}
     }
         \caption{CounterExamples}
