--- a/test_accuracy_paper/test_accuracy.tex
+++ b/test_accuracy_paper/test_accuracy.tex
@@ -87,7 +87,7 @@
 \newcommand{\argmin}{\text{argmin}}
 \newcommand{\Probab}[1]{\mbox{}{\bf{Pr}}\left[#1\right]}
 \newcommand{\Expect}[1]{\mbox{}{\bf{E}}\left[#1\right]}
-\newcommand{\ExpectBracket}[1]{\mbox{}\left<#1\right>}
+\newcommand{\ExpectBracket}[1]{\mbox{}\langle#1\rangle}
 
 % Here are two macros for comments.
 \newcommand {\michael}[1]{{\color{red}\sf{[michael: #1]}}}
