--- a/test_accuracy_paper/test_accuracy.tex
+++ b/test_accuracy_paper/test_accuracy.tex
@@ -90,6 +90,7 @@
 \newcommand{\ExpectBracket}[1]{\mbox{}\langle#1\rangle}
 
 % Here are two macros for comments.
+\newcommand {\nred}[1]{{\color{red}\sf{[#1]}}}
 \newcommand {\michael}[1]{{\color{red}\sf{[michael: #1]}}}
 \newcommand {\charles}[1]{{\color{blue}\sf{[charles: #1]}}}
 \newcommand {\charlesX}[1]{{\color{violet}\sf{[charlesG: #1]}}}
