--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -187,10 +187,20 @@ layer weight matrices.
 More-so, to demonstrate the effectiveness of the approach, we will test these relations with numerical simulations of Heavy tailed Pareto matrices.
 
 \charlesX{Doing so, however, requires care because the pretrained $\mathbf{W}$ are not heavy tailed random matrices, and the empirical
-Frobenius norm behaves very differently from a random Pareto matrix.  Instead of forming a direct relation, we will exploit
-Universality.  
+Frobenius norm behaves very differently from a random Pareto matrix.  Figure XXX displays the direct relation between
+ the power law exponents and the Frobenius norm for both randomly generated heavy tailed matrices, and the weight matrices
+ from the pre-trained VGG16 DNN.   
+ (NEED TO ADD FIGURE)
+ For a random Pareto matrix $\mathbf{W}^{rand}(\mu)$,  the Frobenius norm  $\Vert\mathbf{W}\Vert_{F}$ increases with 
+ decreasing exponent $\mu$;  as the tails of the ESD $\rho(\lambda)$ get heavier, the largest eigenvalue $\lambda_{max}$ of $\mathbf{X}$
+  scales with the largest element of  $\mathbf{W}^{rand}(\mu)$.  But for the weight matrices of a pretrained DNN,
+  the Frobenius norm $\Vert\mathbf{W}\Vert_{F}$ decreases with decreasing exponent $(\alpha)$.  
+  This happens because the pretrained matrices  $\mathbf{W}$ themselves are highly correlated, not random matrices
+  with a single large, atypical element.   And, yet, the ESD of the correlations matrices $\mathbf{X}$ disoplay
+  Universal Heavy Tailed behavior. This is one of the amazing properties of Universality.
+    So instead of forming a direct relation between $\alpha$ and  $\Vert\mathbf{W}\Vert_{F}$ , we will exploit Universality.  
 
-We will derive a simple linear relation between the relation he Frobenius norm (squared) $\Vert\mathbf{W}\Vert^{2}_{F}$, the
+We will derive a simple linear relation between the relation the Frobenius norm (squared) $\Vert\mathbf{W}\Vert^{2}_{F}$, the
 power law exponent  $\alpha$ , and the maximum eigenvalue $\lambda_{max}$ of $\mathbf{X}$ (i.e. the Spectral Norm).  
 
 $$\alpha\log\;\lambda_{max}\sim\log\;\Vert\mathbf{W}\Vert^{2}_{F}$$
